# guided_filter_point_cloud_denoising

./: CMakeLists.txt  README.md
data/: bunny_noisy.pcd  bunny_smoothed.pcd
src/: main.cpp
